# phonolite-server

./: .gitignore  Cargo.toml  README.md
crates/codecs_ffi/: Cargo.toml  build.rs
crates/codecs_ffi/src/: lib.rs  opus.rs  opus_stub.c
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: lib.rs
crates/quic_client/: Cargo.toml
crates/quic_client/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: activity_store.rs  assets.rs  auth.rs  config.rs  external.rs  main.rs  range.rs  scan.rs  shuffle.rs  state.rs  stats_store.rs  stream_sessions.rs  streaming.rs  transcode.rs  user_data.rs  utils.rs  watch.rs
crates/server/src/admin/: activity.rs  assets.rs  auth.rs  library.rs  mod.rs  settings.rs  users.rs
crates/server/src/api/: auth.rs  browse.rs  library.rs  mod.rs  player.rs  server.rs  stats.rs  user_data.rs
crates/server/src/quic/: mod.rs
tools/: Cargo.toml  import_scan.rs
web/static/css/: admin.css  new-ui.css  style.css
web/static/js/: app.js
web/templates/: activity.html  browse.html  layout.html  library.html  login.html  settings.html  setup.html  users.html
web/templates/modals/: metadata_add.html  metadata_edit.html  reindex_confirm.html  unsaved_changes.html  user_add.html  user_delete.html  user_edit.html
web/templates/partials/: album_detail.html  artist_detail.html  artist_detail_modal.html  error.html  footer.html  library_search.html  library_snapshot.html  nav.html  pagination.html  source_row.html  status_notice.html  tile_album.html  tile_artist.html  tile_section.html  tile_track.html  user_row.html
