[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/metadata",
  "crates/library",
  "crates/codecs_ffi",
  "crates/server",
  "crates/quic_client",
  "tools",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["trace", "request-id"] }
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2.0"
walkdir = "2.5"
blake3 = "1.5"
parking_lot = "0.12"
lofty = "0.21"
tokio-util = { version = "0.7", features = ["io"] }
notify = "6.1"
redb = "1.5"
bincode = "1.3"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
