[package]
name = "phonolite_quic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.9.2"
quiche = { version = "0.20", default-features = false, features = ["boringssl-vendored"] }
